ontol/ontol-compiler/test-cases/error/parser/underscore_ident.on
def _foo // ERROR parse error: expected symbol, found `_`
